# Melosyne_FileOP

./: .gitignore  CMakeLists.txt  LICENSE  README.md
bench/: file_read_scheduler_bench.cpp  platform_file_benchmark.cpp  stream_read_benchmark.cpp
cmake/: CenterFileConfig.cmake.in
docs/: README.md  code_quality_review_2026-04-16.md  file_module_design.md  platform_file_validation_report.md  stream_triple_buffer_plan_v1.md  thread_center_integration_phase1.md  thread_center_integration_phase2_report.md  thread_center_integration_phase3_report.md  thread_center_integration_phase4_report.md
examples/add_subdirectory/: CMakeLists.txt  main.cpp
include/Center/File/: BinaryReadHelper.hpp  BuildConfig.hpp  Config.hpp  Error.hpp  FileOp.hpp  FileReadPlanner.hpp  FileReadScheduler.hpp  GlobalFileScheduler.hpp  PlatformFile.hpp  ReadHandlePool.hpp  SchedulingTypes.hpp  StreamReadSession.hpp  StreamReadSessionAsync.hpp  StreamTypes.hpp  ThreadCenterAdapter.hpp  TripleReadBuffer.hpp  Types.hpp
modules/Center/File/: BinaryReadHelper.cppm  Config.cppm  Error.cppm  FileOp.cppm  FileReadPlanner.cppm  FileReadScheduler.cppm  GlobalFileScheduler.cppm  PlatformFile.cppm  ReadHandlePool.cppm  SchedulingTypes.cppm  StreamReadSession.cppm  StreamReadSessionAsync.cppm  StreamTypes.cppm  ThreadCenterAdapter.cppm  TripleReadBuffer.cppm  Types.cppm  module_anchor.cpp
src/: PlatformFileWin32.cpp
tests/: binary_read_helper_tests.cpp  file_read_scheduler_tests.cpp  global_file_scheduler_tests.cpp  module_mapped_view_tests.cpp  platform_file_safety.cpp  stream_read_session_async_tests.cpp  stream_read_session_tests.cpp  triple_read_buffer_tests.cpp
tools/: run_platform_file_validation.ps1
